REN-58
added various services for system admin, company admin, and company
tested & working endpoint: CRUD system-admin, CRUD company-admin, CRUD company