@@ -21,53 +21,63 @@ import java.util.stream.Collectors;
 public class CompanyServiceImpl implements CompanyService {
 
     private final CompanyRepository companyRepository;
+    
+    @Override
+    public CompanyDto findCompanyDtoById(Integer companyId) {
+        
+        Company company = findCompanyEntityById(companyId);
+        return CompanyDto.fromEntity(company);
+    }
+    
+    @Override
+    public Company findCompanyEntityById(Integer companyId) {
+        
+        return companyRepository.findById(companyId)
+            .orElseThrow(() -> new EntityNotFoundException("Company with ID " + companyId + " not found"));
+    }
 
     @Override
     public CompanyDto createCompany(CompanyDto companyDto) {
+        // Check if the company already exists
         Optional<Company> company = companyRepository.findCompanyByName(companyDto.getName());
+        
+        // If the company is found, throw an exception
         if(company.isPresent()){
             throw new OperationNonPermittedException("There is already a company with name: "+companyDto.getName());
         }
+        
+        // Convert the CompanyDto to an entity and save it
         Company companyToSave = CompanyDto.toEntity(companyDto);
         Company savedCompany = companyRepository.save(companyToSave);
+        
         return CompanyDto.fromEntity(savedCompany);
     }
-
+    
     @Override
-    public CompanyDto getCompanyById(Integer companyId) {
-        Company company = companyRepository.findById(companyId)
-                .orElseThrow(() -> new EntityNotFoundException("Company with ID " + companyId + " not found"));
-        return CompanyDto.fromEntity(company);
-    }
+    public CompanyDto updateCompany(CompanyDto companyDto) {
+        
+        // Find the Company Entity by its ID
+        Company companyToUpdate = findCompanyEntityById(companyDto.getId());
 
-    @Override
-    public CompanyDto updateCompanyById(Integer companyId, CompanyDto companyDto) {
-        Optional<Company> companyOptional = companyRepository.findById(companyId);
-
-        if (companyOptional.isPresent()) {
-            Company companyToUpdate = companyOptional.get();
-
-            // Update company details if present
-            if (companyDto.getName() != null && !companyDto.getName().isEmpty()) {
-                companyToUpdate.setName(companyDto.getName());
-            }
-
-            Company updatedCompany = companyRepository.save(companyToUpdate);
-            return CompanyDto.fromEntity(updatedCompany);
-        } else {
-            // Company with the given ID not found
-            throw new EntityNotFoundException("Company with ID " + companyId + " not found");
+        // Update Company details if present
+        if (companyDto.getName() != null && !companyDto.getName().isEmpty()) {
+            companyToUpdate.setName(companyDto.getName());
         }
+
+        // Save the updated Company
+        Company updatedCompany = companyRepository.save(companyToUpdate);
+        
+        return CompanyDto.fromEntity(updatedCompany);
     }
 
     @Override
     public void deleteCompanyById(Integer companyId) {
+        
         // Attempt to retrieve the company by ID
-        Company company = companyRepository.findById(companyId)
-                .orElseThrow(() -> new EntityNotFoundException("Company with ID " + companyId + " not found"));
-
+        Company companyToDelete = findCompanyEntityById(companyId);
+        
         // If the company is found, delete it
-        companyRepository.delete(company);
+        companyRepository.delete(companyToDelete);
     }
 
     @Override
@@ -75,7 +85,7 @@ public class CompanyServiceImpl implements CompanyService {
         List<Company> companies = companyRepository.findAll();
         return companies.stream()
                 .map(CompanyDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 //    private final BuildingService buildingService;
